Align lessons cards with display grid in 3 colums for screens 768px and wider,and fix footer social media links with aria label to pass wave validation

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -746,7 +746,6 @@ h3{
     display: flex;
     flex-direction: column;
     justify-content:flex-start;
-   
     gap: 15%;
     
 }
@@ -860,6 +859,7 @@ footer p{
 .trade-mark{
     color: antiquewhite; 
     margin-bottom: 15px;
+    text-align: center;
 
 }
 .social-media{
@@ -971,6 +971,12 @@ footer p{
 }
 
  @media screen and (min-width:768px){
+    h1{
+        font-size: 2.6rem;
+    }
+    h2{
+        font-size: 2.5rem;
+    }
    
     .nav-toggle{
         display: none;
@@ -1038,6 +1044,9 @@ footer p{
     }
 
     #lessons1{
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        grid-gap: 2%;
 
     }
 
